[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cw-orch = {workspace = true, features=["daemon"]}
# cw-orch-fork-mock = { git="https://github.com/AbstractSDK/cw-orch-interchain", rev="9c9be2ef1d73c6d6034bb7fe5282f9ee263eedcd"}
dotenv = "0.15.0"
interface = { version = "0.1.0", path = "../interface" }
pretty_env_logger = "0.5.0"
